--- a/styles/style.css
+++ b/styles/style.css
@@ -254,12 +254,11 @@ body {
   background: linear-gradient(
       0deg,
       rgba(254, 163, 1, 0.3) 0%,
-      rgba(255, 255, 255, 0) 48%
+      rgba(255, 255, 255, 0.3) 100%
     ),
     url("../assets/bg.png");
-
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .stori-heading {
@@ -330,14 +329,14 @@ body {
   font-size: 1.5rem;
   font-weight: 700;
   color: #000000;
-  margin: 58px 38px 48px;
+  margin: 38px 38px 38px;
   line-height: 38px;
 }
 .stori-descript {
   font-size: 0.9rem;
   font-weight: 500;
   color: #666666;
-  margin: 0px 68px 34px 38px;
+  margin: 0px 68px 50px 38px;
   line-height: 28px;
 }
 .h-six {
@@ -345,7 +344,7 @@ body {
   font-weight: 700;
   color: #000000;
   line-height: 28px;
-  margin: 43px 54px 33px 37px;
+  margin: 23px 54px 33px 37px;
 }
 .stori-two,
 .stori-three,
@@ -353,9 +352,13 @@ body {
 .stori-five {
   width: 290px;
   height: 301px;
+  border-radius: 16px;
   background-color: #fff;
 }
-
+#stori-four-one,
+#stori-four-two {
+  display: none;
+}
 .view-btn {
   font-size: 1.2rem;
   font-weight: 700;
@@ -365,6 +368,45 @@ body {
   border-radius: 12px;
   margin-top: 80px;
   margin-bottom: 60px;
+}
+
+/* footar section */
+.footer {
+  width: 100%;
+  height: 400px;
+  padding-top: 222px;
+  background-color: #01acfd;
+}
+.content-container {
+  max-width: 1070px;
+  height: 222px;
+  color: #fff;
+  margin: 0px auto;
+  align-content: center;
+  justify-content: space-around;
+}
+.logo {
+  gap: 10px;
+  margin-bottom: 35px;
+}
+.logo h1 {
+  font-size: 42px;
+  font-weight: 700;
+}
+.logo p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: auto;
+}
+.footer-menu h5 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.footer-menu li {
+  font-size: 20px;
+  font-weight: 500;
+  list-style: none;
 }
 
 /* responsive stated */
@@ -432,5 +474,29 @@ body {
   .left-slide,
   .right-slide {
     display: none;
+  }
+  .our-stories {
+    width: 100%;
+    text-align: center;
+  }
+  .stories-container {
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 469px;
+  }
+  .stori-one {
+    display: none;
+  }
+  .stori-two,
+  .stori-three,
+  .stori-four,
+  .stori-five {
+    /* width: 173px; */
+  }
+  #stori-four-one,
+  #stori-four-two {
+    display: block;
+  }
+  .h-six {
+    margin-bottom: 16px;
   }
 }
