--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
 
 body {
   /* max-width: 1440px; */
+  overflow-x: hidden !important;
 }
 
 /* shared style */
@@ -44,6 +45,7 @@ body {
   align-items: center;
   justify-content: space-between;
   margin: 20px auto;
+  overflow-x: hidden !important;
 }
 
 .brand {
@@ -101,9 +103,8 @@ body {
   display: none;
 }
 .marq {
-  font-size: 26px;
-  font-weight: 700;
-  color: #03b8c2;
+  margin-top: 10px;
+  color: #05d4df;
 }
 /* banner section */
 .banner {
@@ -172,6 +173,7 @@ body {
   align-items: center;
   justify-content: space-between;
   gap: 21px;
+  /* display: none; */
 }
 
 .card-one {
@@ -277,6 +279,7 @@ body {
     url("../assets/bg.png");
   background-repeat: no-repeat;
   background-size: cover;
+  /* display: none; */
 }
 
 .stori-heading {
@@ -449,24 +452,20 @@ body {
 
 /* responsive stated */
 @media screen and (max-width: 576px) {
-  body {
-    width: 570px;
-  }
   .navbar {
-    width: 570px;
-    margin: 0px auto;
+    width: 100%;
+    margin: 0px;
     border: 0.5px solid var(--Orange, #fea301);
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    /* flex-direction: column; */
+    /* align-items: center;
+    justify-content: space-between; */
   }
   .brand {
-    width: 570px;
+    width: 100%;
     flex-direction: row;
-    align-items: center;
+    margin: 12px 16px;
     justify-content: space-between;
   }
-
   .btn-one,
   .list-item,
   .brand-name {
@@ -474,37 +473,45 @@ body {
   }
 
   .bag {
-    margin-top: 12px;
+    /* margin-top: 12px;
     margin-bottom: 12px;
-    margin-left: 16px;
+    margin-left: 16px; */
   }
 
   .hamburger {
     display: block;
-    margin: 20px 16px 20px 330px;
-  }
-  .marq {
-    font-size: 20px;
+    /* margin: 20px 16px 20px 130px; */
   }
 
   .banner {
     flex-direction: column-reverse;
-    /* max-width: 100%; */
+    max-width: 100%;
     text-align: center;
+  }
+  .banner-img {
+    width: 90%;
+  }
+  .banner-content {
+    width: 90%;
   }
 
   .banner-title {
-    font-size: 2rem;
+    width: 90%;
+    font-size: 1.6rem;
+    font-weight: 700;
+    margin-top: 15px;
+    margin-bottom: 15px;
   }
 
   .banner-descript {
     font-size: 0.87rem;
     font-weight: 500;
-    margin: 18px;
+    margin: 8px;
   }
 
   .enroll-btn {
     font-size: 1rem;
+    margin-top: 15px;
   }
   .curriculum {
     background-repeat: no-repeat;
@@ -518,34 +525,38 @@ body {
 
   .card-container {
     flex-direction: column;
-    /* width: 90%; */
+    width: 90%;
   }
   .card-one,
   .card-two,
   .card-three {
-    width: 370px;
+    width: 85%;
+    padding: 20px;
   }
   .left-slide,
   .right-slide {
     display: none;
   }
   .our-stories {
-    max-width: 100%;
+    max-width: 576px;
     text-align: center;
     align-items: center;
   }
   .stori-heading {
-    margin-top: 40px;
+    margin-top: 40;
     margin-bottom: 20px;
-    font-size: 30px;
-    text-align: center;
+    font-size: 26px;
+  }
+  .flex-div {
+    align-items: center;
+    justify-content: center;
   }
   .stories-container {
     grid-template-columns: repeat(2, 1fr);
-    max-width: 358px;
-    margin-left: 55px;
-    /* height: 1061px; */
+    width: 90%;
+    justify-content: space-between;
     align-items: center;
+    gap: 13px;
   }
   .stori-one {
     display: none;
@@ -554,33 +565,40 @@ body {
   .stori-three,
   .stori-four,
   .stori-five {
-    width: 217px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
   }
   .stori-img {
-    width: 217px;
+    width: 100%;
   }
   #stori-four-one,
   #stori-four-two {
     display: block;
   }
   .stori-date {
-    width: 100px;
+    width: 50%;
     font-size: 11px;
     text-align: center;
     padding-bottom: 11px;
     margin-left: 10px;
   }
   #september {
-    width: 109px;
+    width: 60%;
     font-size: 11px;
   }
   .h-six {
     line-height: 18px;
-    margin: 23px 34px 33px 27px;
+    margin: 40px 10px;
+    line-height: 17px;
+    /* margin-bottom: 50px; */
+  }
+  .view-btn {
+    padding: 10px 22px;
+    margin-top: 22px;
+    margin-bottom: 35px;
   }
   .footer {
-    max-width: 100%;
+    width: 100%;
     height: 642px;
   }
   .content-container {
